<resources>
    <string name="app_name">Crypto Checkout</string>
    <string name="day_minimum">Day Minimum:</string>
    <string name="current_price">Current Price:</string>
    <string name="_24_hour_volume">24 Hour Volume:</string>
    <string name="_24_hour_change">24 Hour change:</string>
    <string name="day_maximum">Day Maximum:</string>
    <string name="analysis">News Analytics</string>
    <string name="semantic_analysis_score">News analysis score:</string>
    <string name="score_default">0.00</string>
    <string name="strategy">Strategy</string>
    <string name="strategy_call">Strategy call:</string>
    <string name="description_default">No details for now</string>
    <string name="call_default">No Call</string>
    <string name="new_coin">New</string>
    <string name="no_news">No Fresh Events</string>
    <string name="events">Events</string>
</resources>